--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 	</head>
 	<body>
 		<p>Primera web de prova</p>
+		<a href="pi_2/index.html"> 
+			<button>Practica_2</button>
+		</a>
 	</body>
 </html>
