--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-		<title>Pràctica individual 1</title>
+		<title>DDJW Page</title>
 	</head>
 	<body>
-		<p>Primera web de prova</p>
+		<p><h1>Diseño y desarrollo de juegos web:</h1></p>
 		<a href="pi_2/index.html"> 
 			<button>Practica_2</button>
 		</a>
