--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<title>DDJW Page</title>
 	</head>
 	<body>
-		<p><h1>Diseño y desarrollo de juegos web:</h1></p>
+		<p><h1 id="title">Diseño y desarrollo de juegos web:</h1></p>
 		<a href="pi_2/index.html"> 
-			<button>Practica_2</button>
+			<button id="boton_p2">Practica_2</button>
 		</a>
 	</body>
 </html>
