Updates index.html y menu_controller.js
Creada la función para volver al menú anterior (index.html practica 1).
Creado botón en index para redirigirte con esta función

--- a/pi_2/index.html
+++ b/pi_2/index.html
@@ -18,6 +18,9 @@
 		<button class="menu-object" onclick="exit()"> 
 			Exit 
 		</button>
+		<button class="menu-object" onclick="backhome()">
+			Back to Menu
+		</button>
 	</body>
 </html>
 
