--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<p><h1 id="title">Diseño y desarrollo de juegos web:</h1></p>
 		<a href="pi_2/index.html"> 
-			<button class="menu-object">Practica_2</button>
+			<button id="boton_p2">Practica_2</button>
 		</a>
 	</body>
 </html>
