Update game.html y css
Prueba para centrar cartas en la pantalla principal del juego

--- a/pi_2/html/game.html
+++ b/pi_2/html/game.html
@@ -8,11 +8,11 @@
 	</head>
 	<body>
 		<p class="menu-object" id="title">Memory game</p>
-		<div id="cards">
-			<img src="../resources/cb.png" onclick="items[0].do_click()">
-			<img src="../resources/tb.png" onclick="items[1].do_click()">
-			<img src="../resources/tb.png" onclick="items[2].do_click()">
-			<img src="../resources/cb.png" onclick="items[3].do_click()">
+		<div class="cards">
+			<img id="image" src="../resources/cb.png" onclick="items[0].do_click()">
+			<img id="image" src="../resources/tb.png" onclick="items[1].do_click()">
+			<img id="image" src="../resources/tb.png" onclick="items[2].do_click()">
+			<img id="image" src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
 		<a class="menu-object" href="../">GoToMenu</a>
 	</body>
