Update game.html y css
Modificación botón pantalla principal

--- a/pi_2/html/game.html
+++ b/pi_2/html/game.html
@@ -14,6 +14,6 @@
 			<img id="image" src="../resources/tb.png" onclick="items[2].do_click()">
 			<img id="image" src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
-		<a class="menu-object" href="../">GoToMenu</a>
+		<a class="menu-object" id="boton" href="../">GoToMenu</a>
 	</body>
 </html>
