--- a/pi_2/html/game.html
+++ b/pi_2/html/game.html
@@ -15,5 +15,8 @@
 			<img id="image" src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
 		<a class="menu-object" id="boton" href="../">GoToMenu</a>
+		<button class="menu-object" id="boton" onclick="exit()"> 
+			Go To Menu
+		</button>
 	</body>
 </html>
