--- a/pi_2/html/game.html
+++ b/pi_2/html/game.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" href="../styles/main.css">
 		<script src="../js/game_controller.js"></script>
 		<script src="../js/loader.js"></script>
+		<script src="./js/menu_controller.js"></script>
 		<title> My first game - Game </title>
 	</head>
 	<body>
