--- a/pi_2/html/game.html
+++ b/pi_2/html/game.html
@@ -15,9 +15,6 @@
 			<img id="image" src="../resources/tb.png" onclick="items[2].do_click()">
 			<img id="image" src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
-		<!-- <a class="menu-object" id="boton" href="../">GoToMenu</a> -->
-		<button class="menu-object" id="boton" href="../" onclick="back_to_menu()"> 
-			Back To Menu
-		</button>
+		 <button class="menu-object" id="boton" href="../">GoToMenu</button> 
 	</body>
 </html>
