--- a/pi_2/html/game.html
+++ b/pi_2/html/game.html
@@ -4,7 +4,6 @@
 		<link rel="stylesheet" href="../styles/main.css">
 		<script src="../js/game_controller.js"></script>
 		<script src="../js/loader.js"></script>
-		<script src="./js/menu_controller.js"></script>
 		<title> My first game - Game </title>
 	</head>
 	<body>
@@ -15,6 +14,9 @@
 			<img id="image" src="../resources/tb.png" onclick="items[2].do_click()">
 			<img id="image" src="../resources/cb.png" onclick="items[3].do_click()">
 		</div>
-		 <button class="menu-object" id="boton" href="../">GoToMenu</button> 
+		<!-- <a class="menu-object" id="boton" href="../">GoToMenu</a> -->
+		<button class="menu-object" id="boton" onclick="back_to_menu()"> 
+			Back To Menu
+		</button>
 	</body>
 </html>
