Update html y css
Modificación botón practica 1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<body>
 		<p><h1 id="title">Diseño y desarrollo de juegos web:</h1></p>
 		<a href="pi_2/index.html"> 
-			<button id="boton_p2">Practica_2</button>
+			<button class="menu-object" id="boton_p2">
+				Practica 2
+			</button>
 		</a>
 	</body>
 </html>
