Update html y css
Modificacion estilo boton p1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<p><h1 id="title">Diseño y desarrollo de juegos web:</h1></p>
 		<a href="pi_2/index.html"> 
-			<button class="menu-object" id="boton_p2">
+			<button id="boton_p2">
 				Practica 2
 			</button>
 		</a>
