Creado boton en index general

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
 				Practica 2
 			</button>
 		</a>
+		<a href="pi_3/index.html">
+			<button id="boton_p3">
+				Practica 3
+			</button>
+		</a>
 	</body>
 </html>
