Update html y css
Cambio de id a class para ambos botones (pi2 y pi3).
Estilo dado al nuevo boton
(prueba)

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<body>
 		<p><h1 id="title">Diseño y desarrollo de juegos web:</h1></p>
 		<a href="pi_2/index.html"> 
-			<button id="boton_p2">
+			<button class="boton_index">
 				Practica 2
 			</button>
 		</a>
 		<a href="pi_3/index.html">
-			<button id="boton_p3">
+			<button class="boton_index">
 				Practica 3
 			</button>
 		</a>
